force-app/main/default/objects/Account/fields/Agency_size__c.field-meta.xml
<CustomField>
    <fullName>Agency_size__c</fullName>
    <label>Agency size</label>
    <length>60</length>
    <type>Text</type>
</CustomField>