force-app/main/default/objects/Account/fields/Agency_Type__c.field-meta.xml
<CustomField>
    <fullName>Agency_Type__c</fullName>
    <label>Agency Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Police Department</fullName>
            </value>
            <value>
                <fullName>Sheriff&apos;s Department</fullName>
            </value>
            <value>
                <fullName>State Law Enforcement Agency</fullName>
            </value>
            <value>
                <fullName>Corrections</fullName>
            </value>
            <value>
                <fullName>Real Time Crime Center</fullName>
            </value>
            <value>
                <fullName>Fusion Center</fullName>
            </value>
            <value>
                <fullName>Other Agency Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>