force-app/main/default/objects/Account/fields/CrimeView_User__c.field-meta.xml
<CustomField>
    <fullName>CrimeView_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the client uses Omega&apos;s CrimeView Dashboard</description>
    <label>CrimeView User</label>
    <type>Checkbox</type>
</CustomField>