force-app/main/default/objects/Account/fields/Enterprise_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Solutions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identified that the Account has related &apos;Enterprise Solutions&apos; opportunities. Sharing rules use this field.</description>
    <inlineHelpText>Check if the Account has any related &apos;Enterprise Solutions&apos; opportunity</inlineHelpText>
    <label>Enterprise Solutions</label>
    <type>Checkbox</type>
</CustomField>