force-app/main/default/objects/Account/fields/Geo__c.field-meta.xml
<CustomField>
    <fullName>Geo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identified that the Account has related &apos;GeoFabric&apos; opportunities. Sharing rules use this field.</description>
    <inlineHelpText>Check if the Account has any related &apos;GeoFabric&apos; opportunity</inlineHelpText>
    <label>Geo</label>
    <type>Checkbox</type>
</CustomField>