force-app/main/default/objects/Account/fields/GeoShield__c.field-meta.xml
<CustomField>
    <fullName>GeoShield__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identified that the Account has related &apos;GeoShield&apos; opportunities. Sharing rules use this field.</description>
    <inlineHelpText>Check if the Account has any related &apos;GeoShield&apos; opportunity</inlineHelpText>
    <label>GeoShield</label>
    <type>Checkbox</type>
</CustomField>