force-app/main/default/objects/Account/fields/Healthcare__c.field-meta.xml
<CustomField>
    <fullName>Healthcare__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identified that the Account has related &apos;Healthcare&apos; opportunities. Sharing rules use this field.</description>
    <inlineHelpText>Check if the Account has any related &apos;Healthcare&apos; opportunity</inlineHelpText>
    <label>Healthcare</label>
    <type>Checkbox</type>
</CustomField>