force-app/main/default/objects/Account/fields/Opportunity_Types__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Types__c</fullName>
    <description>Opportunity types for the Account</description>
    <inlineHelpText>Select potential opportunity types for the Account. You can select more than one</inlineHelpText>
    <label>Opportunity Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opportunity_Types</valueSetName>
    </valueSet>
</CustomField>