force-app/main/default/objects/Account/fields/Spatialitics_Health__c.field-meta.xml
<CustomField>
    <fullName>Spatialitics_Health__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Testing purpose</description>
    <label>Spatialitics Health</label>
    <type>Checkbox</type>
</CustomField>