force-app/main/default/objects/Account/fields/Spatialitics_Utilities__c.field-meta.xml
<CustomField>
    <fullName>Spatialitics_Utilities__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Testing Purpose</description>
    <label>Spatialitics Utilities</label>
    <type>Checkbox</type>
</CustomField>