force-app/main/default/objects/Account/fields/Utilities__c.field-meta.xml
<CustomField>
    <fullName>Utilities__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identified that the Account has related &apos;Utilities&apos; opportunities. Sharing rules use this field.</description>
    <inlineHelpText>Check if the Account has any related &apos;Utilities&apos; opportunity</inlineHelpText>
    <label>Utilities</label>
    <type>Checkbox</type>
</CustomField>